--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,12 @@
 	scroll-behavior: smooth;
 }
 
+body {
+	font-family: 'Inter', sans-serif;
+	background-color: #121212;
+	color: #F7FAFC;
+}
+
 .no-scrollbar {
 	-ms-overflow-style: none;
 	scrollbar-width: none;
