--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,9 @@ body {
 	font-family: 'Inter', sans-serif;
 	background-color: #121212;
 	color: #F7FAFC;
+	::selection {
+		@apply bg-white/40
+	}
 }
 
 .no-scrollbar {
