--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,8 +13,9 @@
 
 body {
 	font-family: 'Inter', sans-serif;
-	background-color: #121212;
-	color: #F7FAFC;
+	color: #121212;
+	background-color: #F7FAFC;
+	font-size: 18px;
 	::selection {
 		@apply bg-white/40
 	}
